[package]
authors = ["Andrew Loebs <andrew.loebs@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "embedded-rust-example"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

[[bin]]
name = "embedded-rust-example"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
